[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyusel-pycbf"
version = "1.1.0"
description = "C-Backed beamforming engines"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ email = "wew12@duke.edu" }]

dependencies = [
  "numpy",
  "h5py",
  "matplotlib",
  "tqdm"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

# GPU extras — user picks the one matching their CUDA runtime
gpu-cuda11x = ["cupy-cuda11x>=12.0.0,<13.0.0"]
gpu-cuda12x = ["cupy-cuda12x>=13.0.0,<14.0.0"]
gpu-cuda13x = ["cupy-cuda13x>=13.0.0,<14.0.0"]
gpu-rocm    = ["cupy-rocm>=12.0.0,<13.0.0"]

[tool.setuptools.package-data]
"pycbf.gpu" = ["__engines__.cu", "__advanced_engines__.cu"]